Fixup 3: Update wc-config for compliantkubernetes-apps v0.10.0

--- a/compliant-k8s-icap-server-pipeline/wc-config.yaml
+++ b/compliant-k8s-icap-server-pipeline/wc-config.yaml
@@ -43,7 +43,7 @@ user:
         ingress:
             enabled: false
 falco:
-    enabled: false
+    enabled: true
     resources:
         limits:
             cpu: 200m
