Fixup 5: Update Github Action: Build AMI for Service Cluster

--- a/compliant-k8s-icap-server-pipeline/sc-config.yaml
+++ b/compliant-k8s-icap-server-pipeline/sc-config.yaml
@@ -266,6 +266,9 @@ elasticsearch:
     tolerations: []
     nodeSelector: {}
   clientNode:
+    ## Enables dedicated deployment for client/ingest nodes.
+    ## If false, master nodes will assume client/ingest roles
+    dedicatedPods: true
     count: 1
     javaOpts: -Xms512m -Xmx512m
     resources:
