Add ck8sdash config

--- a/compliant-k8s-icap-server-pipeline/sc-config.yaml
+++ b/compliant-k8s-icap-server-pipeline/sc-config.yaml
@@ -456,6 +456,27 @@ alerts:
     channel: set-me
   opsGenie:
     apiUrl: https://api.eu.opsgenie.com
+ck8sdash:
+  enabled: false
+  tolerations: []
+  affinity: {}
+  nodeSelector: {}
+  nginx:
+    resources:
+      requests:
+        memory: 64Mi
+        cpu: 50m
+      limits:
+        memory: 128Mi
+        cpu: 100m
+  server:
+    resources:
+      requests:
+        memory: 64Mi
+        cpu: 50m
+      limits:
+        memory: 128Mi
+        cpu: 100m
 externalTrafficPolicy:
   local: false
   whitelistRange:
