--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -129,7 +129,7 @@ jobs:
         cd vmware-scripts/packer
         export SHA8=${GITHUB_SHA::8}
         mkdir -p ../../compliant-k8s-icap-server-pipeline/.state
-        PACKER_LOG=1 PACKER_LOG_PATH=packer.log packer build -var-file=aws-vars-pipeline-sc.json aws-ami-sc.json
+        PACKER_LOG=1 PACKER_LOG_PATH=packer.log packer build -on-error=abort -var-file=aws-vars-pipeline-sc.json aws-ami-sc.json
 
     - name: Build Workload Cluster AMI
       env:
