Move PGP and secret generation out of Packer script

--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -104,6 +104,25 @@ jobs:
         mkdir -p ../../compliant-k8s-icap-server-pipeline/sc-config/ssh
         cp temp_ssh_key ../../compliant-k8s-icap-server-pipeline/sc-config/ssh/id_rsa
 
+    - name: Generate PGP key
+      run: |
+        cd compliant-k8s-icap-server-pipeline
+        export GNUPGHOME=$(mktemp -d)
+        echo $GNUPGHOME > gnupghome.txt
+        ./pgp-generator.sh
+
+    - name: Generate CK8s secrets
+      run: |
+        cd compliant-k8s-icap-server-pipeline
+        ./secrets-generator.sh
+
+    - name: Encrypt CK8s secrets and ssh keys
+      run: |
+        cd compliant-k8s-icap-server-pipeline
+        sops -i -e secrets.yaml
+        sops -i -e wc-config/ssh/id_rsa
+        sops -i -e sc-config/ssh/id_rsa
+
     - name: Build Service Cluster AMI
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
