Add metricsServer config

--- a/compliant-k8s-icap-server-pipeline/sc-config.yaml
+++ b/compliant-k8s-icap-server-pipeline/sc-config.yaml
@@ -569,3 +569,7 @@ certmanager:
     nodeSelector: {}
     tolerations: {}
     affinity: {}
+
+## Configuration for metric-server
+metricsServer:
+  enabled: false
