--- a/compliant-k8s-icap-server-pipeline/wc-config.yaml
+++ b/compliant-k8s-icap-server-pipeline/wc-config.yaml
@@ -266,3 +266,7 @@ certmanager:
         nodeSelector: {}
         tolerations: {}
         affinity: {}
+
+## Configuration for metric-server
+metricsServer:
+  enabled: false
