--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -29,6 +29,7 @@ on:
     paths-ignore:
       - 'icap-client-docker'
       - '.github/workflows/proxy-rebuild-ova.yaml'
+      - 'README.md'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
