--- a/local-storage-pv.yaml
+++ b/local-storage-pv.yaml
@@ -8,6 +8,6 @@ spec:
   accessModes:
   - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: node-local
+  storageClassName: local-storage
   hostPath:
     path: "/mnt/disks"
