--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -25,7 +25,7 @@ on:
         default: "true"
         required: true
   push:
-    branches: [ ck8s_apps_v0.11.0 ]
+    branches: [ cs-api ]
     paths-ignore:
       - 'icap-client-docker'
       - '.github/workflows/proxy-rebuild-ova.yaml'
