Do not run pipeline on CloudFormation template updates

--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -30,6 +30,7 @@ on:
       - 'icap-client-docker'
       - '.github/workflows/proxy-rebuild-ova.yaml'
       - 'README.md'
+      - 'Compliant_Kubernetes_ICAP_Service_with_Service_Cluster_Proxy_REST_API.json'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
