--- a/.gitmodules
+++ b/.gitmodules
@@ -15,3 +15,6 @@
 [submodule "cs-k8s-api"]
 	path = cs-k8s-api
 	url = git@github.com:elastisys/cs-k8s-api.git
+[submodule "icap-infrastructure"]
+	path = icap-infrastructure
+	url = git@github.com:filetrust/icap-infrastructure.git
