--- a/.github/workflows/compliant-k8s-icap-server_test.yaml
+++ b/.github/workflows/compliant-k8s-icap-server_test.yaml
@@ -1,6 +1,5 @@
 # This is a workflow to build AMI with ICAP server
-
-name: icap-server
+name: icap-server-test
 env:
   AWS_DEFAULT_REGION: eu-west-1
 # Controls when the action will run. Triggers the workflow on push or pull request
