--- a/.gitmodules
+++ b/.gitmodules
@@ -4,7 +4,7 @@
 	branch = master
 [submodule "compliantkubernetes-apps"]
 	path = compliantkubernetes-apps
-	url = git@github.com:elastisys/compliantkubernetes-apps
+	url = https://github.com/gurunathg/compliantkubernetes-apps
 	branch = main
 [submodule "icap-infrastructure"]
 	path = icap-infrastructure
