--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -14,11 +14,11 @@ on:
         required: false
       extra_regions:
         description: Extra regions where AMI should be published. Pass multiple regions with comma separated.
-        default: eu-west-1,eu-west-2,eu-west-3,us-east-2,us-east-1,us-west-1
+        default: eu-west-1
         required: false
-      monitoring_ip:
-        description: IP address of Monitoring server
-        default: 91.109.26.22
+      create_sc:
+        description: Create Service Cluster
+        default: "false"
         required: true
       create_ova:
         description: Create OVA
@@ -118,6 +118,7 @@ jobs:
         sops -i -e sc-config/ssh/id_rsa
 
     - name: Build Service Cluster AMI
+      if: ${{ github.event.inputs.create_sc }}
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -145,7 +146,7 @@ jobs:
         cd vmware-scripts/packer
         export SHA8=${GITHUB_SHA::8}
         mkdir -p ../../compliant-k8s-icap-server-pipeline/.state
-        PACKER_LOG=1 PACKER_LOG_PATH=packer.log packer build -var-file=aws-vars-pipeline.json aws-ami.json
+        PACKER_LOG=1 PACKER_LOG_PATH=packer.log packer build -var-file=aws-vars-pipeline.json -var create_ova=${{ github.event.inputs.create_ova }} -var region=${{ env.AWS_DEFAULT_REGION }} aws-ami.json
 
     - name: Delete temporary SSH key
       if: always()
