--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -18,7 +18,7 @@ on:
         required: false
       create_sc:
         description: Create Service Cluster
-        default:  false
+        default: "false"
         required: true
       create_ova:
         description: Create OVA
