--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -129,7 +129,7 @@ jobs:
         PACKER_LOG=1 PACKER_LOG_PATH=packer.log packer build -var-file=aws-vars-pipeline.json -var create_ova=${{ github.event.inputs.create_ova }} -var cs_api_image=${{ github.event.inputs.cs_api_image }} -var region=${{ env.AWS_DEFAULT_REGION }} aws-ami.json
 
     - name: Build Service Cluster AMI
-      if: ${{ github.event.inputs.create_sc }}
+      if: ${{ github.event.inputs.create_sc == 'true' }}
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
