--- a/.github/workflows/compliant-k8s-icap-server.yaml
+++ b/.github/workflows/compliant-k8s-icap-server.yaml
@@ -123,12 +123,12 @@ jobs:
         DOCKER_EMAIL: ${{ secrets.DOCKER_EMAIL }}
         GNUPGHOME: ${{ env.GNUPGHOME }}
         CS_API_IMAGE: ${{ github.event.inputs.cs_api_image }}
-        SSH_PASSWORD: ${{ secrets.DOCKER_EMAIL }}
+        SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
       run: |
         cd vmware-scripts/packer
         export SHA8=${GITHUB_SHA::8}
         mkdir -p ../../compliant-k8s-icap-server-pipeline/.state
-        PACKER_LOG=1 PACKER_LOG_PATH=packer.log packer build -var-file=aws-vars-pipeline.json -var create_ova=${{ github.event.inputs.create_ova }} -var cs_api_image=${{ github.event.inputs.cs_api_image }} -var region=${{ env.AWS_DEFAULT_REGION }} aws-ami.json
+        PACKER_LOG=1 PACKER_LOG_PATH=packer.log packer build -var-file=aws-vars-pipeline.json -var create_ova=${{ github.event.inputs.create_ova }} -var region=${{ env.AWS_DEFAULT_REGION }} -var SSH_PASSWORD=${{ secrets.SSH_PASSWORD }} -var CS_API_IMAGE=${{ github.event.inputs.cs_api_image }} aws-ami.json
 
     - name: Build Service Cluster AMI
       if: ${{ github.event.inputs.create_sc == 'true' }}
