--- a/.github/workflows/complaint-k8s-CloudSDK.yaml
+++ b/.github/workflows/complaint-k8s-CloudSDK.yaml
@@ -1,6 +1,6 @@
 # This is a workflow to build AMI with ICAP server
 
-name: icap-server
+name: CK8icap-GW_CloudSDK
 env:
   AWS_DEFAULT_REGION: eu-west-1
 # Controls when the action will run. Triggers the workflow on push or pull request
