updated OVA flow

--- a/.github/workflows/complaint-k8s-CloudSDK.yaml
+++ b/.github/workflows/complaint-k8s-CloudSDK.yaml
@@ -137,7 +137,7 @@ jobs:
         SSH_PASSWORD=${{ secrets.SSH_PASSWORD }}
         CS_API_IMAGE=${{ github.event.inputs.cs_api_image }}
         EOF
-        export SHA8=${GITHUB_SHA::8}
+        export RUN_ID=${GITHUB_RUN_ID}
         mkdir -p ../../compliant-k8s-icap-server-pipeline/.state
         PACKER_LOG=1 PACKER_LOG_PATH=packer.log packer build -var-file=aws-vars-pipeline.json -var create_ova=${{ github.event.inputs.create_ova }} -var region=${{ env.AWS_DEFAULT_REGION }} aws-ami.json
 
@@ -153,7 +153,7 @@ jobs:
         GNUPGHOME: ${{ env.GNUPGHOME }}
       run: |
         cd vmware-scripts/packer
-        export SHA8=${GITHUB_SHA::8}
+        export RUN_ID=${GITHUB_RUN_ID}
         mkdir -p ../../compliant-k8s-icap-server-pipeline/.state
         PACKER_LOG=1 PACKER_LOG_PATH=packer.log packer build -var-file=aws-vars-pipeline-sc.json -var create_sc_ova=${{ github.event.inputs.create_sc_ova }} aws-ami-sc.json
 
