--- a/.github/workflows/complaint-k8s-CloudSDK.yaml
+++ b/.github/workflows/complaint-k8s-CloudSDK.yaml
@@ -57,9 +57,9 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: eu-west-1
 
-    - name: Update and upgrade apt
+    - name: Update apt
       run: |
-        sudo apt -y update && sudo apt -y upgrade
+        sudo apt -y update
 
     - name: Setup PWGEN
       run: |
