--- a/.github/workflows/complaint-k8s-CloudSDK.yaml
+++ b/.github/workflows/complaint-k8s-CloudSDK.yaml
@@ -128,6 +128,7 @@ jobs:
         GNUPGHOME: ${{ env.GNUPGHOME }}
         CS_API_IMAGE: ${{ github.event.inputs.cs_api_image }}
         SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
+        MINIO_SECRET: ${{ secrets.MINIO_SECRET }}
       run: |
         cd vmware-scripts/packer
         cat > .env <<EOF
@@ -136,6 +137,7 @@ jobs:
         DOCKER_EMAIL=${{ secrets.DOCKER_EMAIL }}
         SSH_PASSWORD=${{ secrets.SSH_PASSWORD }}
         CS_API_IMAGE=${{ github.event.inputs.cs_api_image }}
+        MINIO_SECRET= ${{ secrets.MINIO_SECRET }}
         EOF
         export RUN_ID=${GITHUB_RUN_ID}
         mkdir -p ../../compliant-k8s-icap-server-pipeline/.state
